--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,11 @@ jobs:
       with:
         python-version: '3.9'
 
+    - name: Install build tools
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
