--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,5 +32,7 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run tests
+      env:
+        PYTHONWARNINGS: "ignore"
       run: |
         python -m unittest discover -s pages -p "test_*.py"
